--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bowser": "^2.11.0",
     "classnames": "^2.2.6",
     "email-validator": "^2.0.4",
+    "firebase": "^8.0.0",
     "intersection-observer": "^0.11.0",
     "keen-slider": "^5.2.4",
     "lodash.debounce": "^4.0.8",
